refactor(auth): move login and signup endpoints to AuthController
- Extract authentication endpoints from UserController to dedicated AuthController
- Move /users/login and /users/signup to /auth/login and /auth/signup
- Preserve existing DTOs and signup logic functionality
- Update SecurityConfiguration to permit new /auth/** endpoints
- Improve separation of concerns between user management and authentication